--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -19,3 +19,12 @@
   margin-left: 20px;
   font-size: 25px;
 }
+
+.logoo {
+  color: bisque;
+  position: fixed;
+  top: 0;
+  left: 5rem;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
